2013-05-18  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/action/kick_table.cpp:
	- ボールをこぼすかもしれないノードはリスキーノードとして扱わないよ
	うに変更
	- 目標スピードを達成できていない場合はリスキーノードを使用した計算
	を実行するように条件を変更

	* rcsc/action/kick_table.cpp:
	* rcsc/action/kick_table.h:
	- キック列探索アルゴリズムを改善．リスキーなノードを省いた探索とリ
	スキーなノードのみの探索に分けて実行し，安全なキック列が生成されやすくした

2013-05-13  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/coach/coach_agent.cpp:
	* rcsc/coach/coach_config.cpp:
	* rcsc/coach/coach_config.h:
	* rcsc/player/player_agent.cpp:
	* rcsc/player/player_config.cpp:
	* rcsc/player/player_config.h:
	* rcsc/trainer/trainer_agent.cpp:
	* rcsc/trainer/trainer_config.cpp:
	* rcsc/trainer/trainer_config.h:
	- 各Configクラスに値をセットする方法を変更．parse()の引数として
	ParamParserを与えるようになった

	* rcsc/player/ball_object.cpp:
	* rcsc/player/ball_object.h:
	* rcsc/player/player_object.cpp:
	* rcsc/player/player_object.h:
	* rcsc/player/world_model.cpp:
	- 使用していなかった引数を削除
	- BallObjectとPlayerObjectに位置の履歴を保持する変数を追加

	* rcsc/player/Makefile.am:
	* rcsc/player/world_model.cpp:
	* rcsc/player/world_model.h:
	- PlayerObjectUpdaterをビルドターゲットから削除

2013-05-09  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/coach/coach_debug_client.cpp:
	* rcsc/common/online_client.cpp:
	* rcsc/net/abstract_socket.cpp:
	* rcsc/net/abstract_socket.h:
	* rcsc/net/host_address.cpp:
	* rcsc/net/host_address.h:
	* rcsc/net/tcp_socket.cpp:
	* rcsc/net/tcp_socket.h:
	* rcsc/net/udp_socket.cpp:
	* rcsc/net/udp_socket.h:
	* rcsc/player/debug_client.cpp:
	- ソケット周りのコード整理．仮想関数のsend,receiveを廃止し，TCPと
	UDPでそれぞれ別メソッド名として定義する方針に変更

	* .gitignore:
	- 無視するファイルの整理

	* rcsc/net/abstract_socket.cpp:
	* rcsc/net/abstract_socket.h:
	* rcsc/net/host_address.cpp:
	* rcsc/net/host_address.h:
	- HostAddressクラスでソケットの実装を置き換え

2013-05-08  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/net/host_address.cpp:
	* rcsc/net/host_address.h:
	* rcsc/net/Makefile.am:
	- HostAddressクラスを追加．未テスト．

	* rcsc/net/Makefile.am:
	* rcsc/net/abstract_socket.cpp:
	* rcsc/net/abstract_socket.h: